// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`chooseIcon() returns a location arrow element if the photo has a suggested location 1`] = `
<div
  className="icon"
>
  <FiNavigation
    style={
      Object {
        "left": "-1px",
        "position": "relative",
        "top": "-1px",
      }
    }
  />
</div>
`;

exports[`chooseIcon() returns a map marker element if the photo has an existing location 1`] = `
<div
  className="icon"
>
  <FiMapPin
    style={
      Object {
        "left": undefined,
        "position": "relative",
        "top": "-2px",
      }
    }
  />
</div>
`;

exports[`chooseIcon() returns an exclamation circle element if the photo has an error 1`] = `
<div
  className="icon"
>
  <FiAlertCircle
    style={
      Object {
        "left": undefined,
        "position": "relative",
        "top": "-2px",
      }
    }
  />
</div>
`;
